@@ -7,7 +7,8 @@ CHANGELOG for Fall of Eden
 
 Version 0.3y
 ------------
-* 
+* Fixed a bug that showed up on firefox where the game wouldn't load.
+* Fixed Terry's pregnancy getting reset on save/load.
 
 --------------------------------------------
              PREVIOUS VERSIONS
